--- a/n12_ProyectoServidor/data/servidor.properties
+++ b/n12_ProyectoServidor/data/servidor.properties
@@ -1,4 +1,4 @@
-puerto=9990
-url=jdbc:firebirdsql://localhost:3050/C:/Users/ss/Desktop/Estructura de datos/WorkSpace/n12_ProyectoServidor/lib/DATOS.FDB
+puerto=9997
+url=jdbc:firebirdsql://localhost:3050/C:/Users/usuario/git/ProyectoEstructura/n12_ProyectoServidor/lib/DATOS.FDB
 user=SYSDBA
 pass=masterkey
