--- a/n12_ProyectoServidor/data/servidor.properties
+++ b/n12_ProyectoServidor/data/servidor.properties
@@ -1,4 +1,4 @@
 puerto=9988
-url=jdbc:firebirdsql://localhost:3050/C:/Users/ss/git/ProyectoEstructura/n12_ProyectoServidor/lib/DATOS.FDB
+url=F:/work/n12_ProyectoServidor/lib/DATOS.FDB
 user=SYSDBA
 pass=masterkey
